- Set version postgres 16 - Create crud assert - Create crud Portfolio - Create Custom Exception